dev:change: The long awaited return of source maps - Included gulp-if to only sourcemap on local

--- a/libs/styles/dev.less
+++ b/libs/styles/dev.less
@@ -6,7 +6,7 @@
  */
 
 // Import all website styles
-@import "site";
+@import "styles";
 
 // Import styleguide specific styles
 @import "base/vendors/prism/*";
