dev:change: Improving jade template partials

--- a/libs/jade/forms/clipboard.jade
+++ b/libs/jade/forms/clipboard.jade
@@ -58,7 +58,7 @@ block section-notice
 block content
 	.articleContent
 
-		p Copy to clipboard is an experimental pattern that allows users to copy the current url easily. This means that clients can share through any channel, not just from the options in the #[a(href="#{dir}modules/toolbar.html") toolbar].
+		p Copy to clipboard is an experimental pattern that allows users to copy the current url easily. This means that clients can share through any channel, not just from the options in the #[a(href="#{dir}modules/partials/toolbar.html") toolbar].
 
 		.example-box-plain
 			fieldset
@@ -77,7 +77,7 @@ block content
 				| 	&lt;/div&gt;
 				| &lt;/fieldset&gt;
 
-		p There is also a smaller version for this pattern, which is used in the #[a(href="#{dir}modules/toolbar.html") toolbar]
+		p There is also a smaller version for this pattern, which is used in the #[a(href="#{dir}modules/partials/toolbar.html") toolbar]
 
 		.example-box-plain
 			button.a-social-copy Copy link
