--- a/libs/jade/templates/email-template.jade
+++ b/libs/jade/templates/email-template.jade
@@ -1,43 +1,12 @@
-include mixins.jade
-block settings
-doctype html
-html.no-js
-	head
-		meta(content="text/html; charset=utf-8", http-equiv="Content-Type")
-		meta(charset="utf-8")
-		meta(content="IE=edge", http-equiv="X-UA-Compatible")
-		meta(name="keywords")
-		meta(name="description")
-		//base(href="#{dir}")
-
-		title Citizens Advice style guide
-			- if (typeof title !== "undefined")
-				| - #{title}
-
-		// Mobile Specific Metas
-		meta(content="width=device-width, initial-scale=1, maximum-scale=2.0", name="viewport")
-		meta(content="48a2415d-980f-4763-a5b9-e10e000636b3", name="cab-guid")
-		meta(content="EWS", name="cab-extent")
-		meta(content="#{dir}static/images/dev/apple-touch-icon.png")
-		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
-
-		// Stylesheets
-		link(href="#{dir}css/dev.css", rel="stylesheet")
-		link(href="#{dir}images/dev/favicon/32.png", rel="shortcut icon")
-		link(href="#{dir}images/dev/favicon/228.png", rel="apple-touch-icon")
-
-		script
-			include ../../js/head.js
-
-		block head
+include partials/header
 
 	body
 		header.main-header.email-header
 			.main-header__content.email-width
 				a.main-header__logo(href="index.html", title="Citizens Advice home")
-					img(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo_100px.svg" height="80")
+					img(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo_100px.svg" height="80")
 
-					img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
+					img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
 
 
 		.main-container
@@ -53,7 +22,7 @@ html.no-js
 			.footer-content.flex-row
 			.footer--legal
 				.footer--legal--content
-					img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
+					img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
 					p
 						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 						br
