fix: Inverting the media query used to hide the table cells on mobile The media query would show the cells if not mobile, but it was switched to hide them if mobile. This fixes the issue of old browsers not understanding media queries so showing the mobile fist version

--- a/libs/styles/theme/energy-comparison.less
+++ b/libs/styles/theme/energy-comparison.less
@@ -88,12 +88,13 @@
     .billing,
     .switching,
     .commitment {
-        display: none;
+        display: table-cell;
         color: @heritage-blue;
+		width: 11%;
         //font-weight: @font-weight-bold;
-        @media screen and (min-width: @breakpoint-md) {
-            display: table-cell;
-            width: 11%;
+        @media screen and (max-width: (@breakpoint-md - 1)) {
+            display: none;
+			width: auto;
         }
         @media screen and (min-width: @breakpoint-lg) {
             width: 12%;
