dev:fix: Removing the ../ after dir in image links to fix their altered location with new gulp process

--- a/libs/jade/templates/template-site.jade
+++ b/libs/jade/templates/template-site.jade
@@ -67,8 +67,8 @@ include partials/header
 			header.blog-header
 				.blog-header--content
 					a(href="blog-home.html", style="border: none;")
-						img.wide(src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
-						img.slim(src="#{dir}../images/dev/ca-logo-st-white-220px.svg")
+						img.wide(src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
+						img.slim(src="#{dir}images/dev/ca-logo-st-white-220px.svg")
 
 					//#toggle
 					//ul.blog-navigation
@@ -102,8 +102,8 @@ include partials/header
 				.navigation
 					.content
 						a.logo(href="#{dir}index.html")
-							img.wide(src="#{dir}../images/dev/ca-logo-hz-280px.svg")
-							img.slim(src="#{dir}../images/dev/ca-logo-st-220px.svg")
+							img.wide(src="#{dir}images/dev/ca-logo-hz-280px.svg")
+							img.slim(src="#{dir}images/dev/ca-logo-st-220px.svg")
 
 						ul
 							li#get-advice
@@ -283,7 +283,7 @@ include partials/header
 
 			.footer--legal
 				.footer--legal--content
-					img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
+					img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
 					p
 						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 						br
