--- a/libs/jade/templates/template.jade
+++ b/libs/jade/templates/template.jade
@@ -70,9 +70,9 @@ include partials/header
 			header.main-header
 				.main-header__content
 					a.main-header__logo(href="index.html", title="Citizens Advice home")
-						img(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo_100px.svg" height="80")
+						img(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo_100px.svg" height="80")
 
-						img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
+						img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
 						a.main-header__menu-link.js-toggle-menu(href="")
@@ -133,8 +133,8 @@ include partials/header
 			header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;#{dir}../images/dev/ca-logo_100px.svg.png&#39;;", src="#{dir}../images/dev/ca-logo_100px.svg")
-					img.print-only.logo(src="#{dir}../images/dev/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;#{dir}images/dev/ca-logo_100px.svg.png&#39;;", src="#{dir}images/dev/ca-logo_100px.svg")
+					img.print-only.logo(src="#{dir}images/dev/ca-logo-hz-280px.svg")
 
 		else if logoutheader
 			aside.section-notice__login
@@ -144,14 +144,14 @@ include partials/header
 			header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/#{dir}../images/dev/logos/ca-logo_100px.svg.png&#39;;", src="#{dir}../images/dev/ca-logo_100px.svg")
-					img.print-only.logo(src="#{dir}../images/dev/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/#{dir}images/dev/logos/ca-logo_100px.svg.png&#39;;", src="#{dir}images/dev/ca-logo_100px.svg")
+					img.print-only.logo(src="#{dir}images/dev/ca-logo-hz-280px.svg")
 
 		else if blog
 			header.blog-header
 				.blog-header--content
 					a(href="blog-home.html", style="border: none;")
-						img(src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
+						img(src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
 
 					#toggle
 					ul.blog-navigation
@@ -169,7 +169,7 @@ include partials/header
 				.styleguide--header--content
 					a#issuereport.btn-white.btn-small(href="https://github.com/citizensadvice/cab-ui/issues/new") Give feedback
 					a(href="#{dir}index.html", style="border: none;")
-						img(src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
+						img(src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
 					a#repo(href="https://github.com/citizensadvice/cab-ui", style="border: none;") v3.0.0
 
 		.main-container
@@ -245,7 +245,7 @@ include partials/header
 
 					.footer--legal
 						.footer--legal--content
-							img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
+							img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
 							p
 								| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 								br
@@ -280,7 +280,7 @@ include partials/header
 
 					.footer--legal
 						.footer--legal--content
-							img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
+							img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
 							p
 								| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 								br
@@ -374,7 +374,7 @@ include partials/header
 						.main-footer__box.main-footer__box--copyright
 							div
 								p
-									img(alt="", height="100", src="#{dir}../images/dev/ca-logo_100px.svg", width="100")
+									img(alt="", height="100", src="#{dir}images/dev/ca-logo_100px.svg", width="100")
 									| Copyright © 2016 Citizens Advice. All rights reserved.
 									br
 									| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
@@ -387,7 +387,7 @@ include partials/header
 			#footer.main-footer(data-track-zone="footer")
 				.footer--legal
 					.footer--legal--content
-						img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
+						img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
 						p
 							| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 							br
