--- a/libs/jade/templates/email-template.jade
+++ b/libs/jade/templates/email-template.jade
@@ -4,9 +4,9 @@ include partials/header
 		header.main-header.email-header
 			.main-header__content.email-width
 				a.main-header__logo(href="index.html", title="Citizens Advice home")
-					img(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo_100px.svg" height="80")
+					img(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo_100px.svg" height="80")
 
-					img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}../images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}../images/dev/ca-logo-hz-white-280px.svg")
+					img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='#{dir}images/dev/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="#{dir}images/dev/ca-logo-hz-white-280px.svg")
 
 
 		.main-container
@@ -22,7 +22,7 @@ include partials/header
 			.footer-content.flex-row
 			.footer--legal
 				.footer--legal--content
-					img(alt="", src="#{dir}../images/dev/ca_wo-logo-100px.svg")
+					img(alt="", src="#{dir}images/dev/ca_wo-logo-100px.svg")
 					p
 						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 						br
