fix: in index.jade, fixed link path to Content toolbar module

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -76,7 +76,7 @@ block content
 					//li
 						a(href="modules/section-notice-dev.html") Section Notice Development
 					li
-						a(href="modules/partials/toolbar.html") Content toolbar
+						a(href="modules/toolbar.html") Content toolbar
 					li
 						a(href="modules/sticky.html") Sticky box
 					//li
