dev:change: New search results pages edited to have typo as secondary link and assumed search in its place as the page title

--- a/libs/jade/dev/search/results-adviser.jade
+++ b/libs/jade/dev/search/results-adviser.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "benafits"
+	- var title = "Benefits"
 	- var dir = "../../"
 	//- var sidebar = true
 
@@ -15,7 +15,7 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			.term-suggestion Did you mean #[a benefits]?
+			.term-suggestion Search instead for #[a bnefits]?
 			.term-correction Showing #[strong 89] results for #[strong benefits]
 			ul.search-results
 
