--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "benafits"
+	- var title = "Benefits"
 	- var dir = "../../"
 	//- var sidebar = true
 
@@ -15,8 +15,8 @@ block script
 block content
 	.flex-row
 		.col-md-8.col-sm-12
-			.term-suggestion Did you mean #[a benefits]?
-			.term-correction Showing results for #[strong benefits]
+			.term-suggestion Search instead for #[a bnefits]?
+			.term-correction Showing 89 results for #[strong benefits]
 			ul.search-results
 
 				li
