--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -110,6 +110,13 @@
     }
 }
 
+.search-title {
+    font-size: @font-size-medium;
+    margin-top: -1rem;
+    margin-bottom: 1.5rem;
+    color: @heritage-blue;
+}
+
 .term-suggestion {
     margin-top: -1rem;
     margin-bottom: 1.5rem;
