--- a/libs/jade/dev/search/results-adviser-old-jan17.jade
+++ b/libs/jade/dev/search/results-adviser-old-jan17.jade
@@ -1,10 +1,9 @@
 block settings
-	- var mockup = true
-	- var sidebar = true
+	- var title = "Benefits"
 	- var dir = "../../"
 	//- var sidebar = true
 
-extends /jade/templates/template.jade
+extends /jade/templates/template-site.jade
 
 block breadcrumbs
 	+breadcrumbs([
@@ -15,34 +14,34 @@ block script
 
 block content
 	.flex-row
-		.col-12
-			.search-title Showing results for #[strong Do I qualify for benefits in the UK]
-			.term-suggestion Search instead for #[a Do I qualify for bnefits in the UK]
+		.col-md-8.col-sm-12
+			.term-suggestion Search instead for #[a bnefits]?
+			.term-correction Showing #[strong 89] results for #[strong benefits]
 			ul.search-results
 
 				li
 					.heading
 						a Benefits
-					.description These pages give you information on #[strong benefits] and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
-					//-.adviser-categories
+					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
+					.adviser-categories
 						ul(style="margin:0")
 							li #[a Benefits fact sheets]
 							li #[a Universal Credit]
 							li #[a Help if on a low income]
-							li(style="margin:0") #[a Making welfare work locally]
+							li #[a Making welfare work locally]
 
 				li
 					.heading
 						a Sick or disabled people and carers
-					.description If you're sick or disabled, you may be able to claim #[strong benefits] and tax credits.
-					//-ul.section
+					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
+					ul.section
 						li #[a Benefits]
 
 				li
 					.heading
 						a Employment and Support Allowance (ESA)
 					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					//-ul.section
+					ul.section
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
 
@@ -50,20 +49,20 @@ block content
 					.heading
 						a Contractual sick pay
 					.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
-					//-ul.section
+					ul.section
 						li #[a Workplace rights]
 						li #[a Sick pay]
 
 				li
 					.heading
 						a Benefits for families and children
-					.description #[strong Benefits] for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
-					//-ul.section
+					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
+					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
 
 				li.pagination
-					#[a.blocklink(href="/dev/search/results-public-page-2.html") 84 more results for 'Do I qualify for benefits in the UK']
+					#[a.blocklink(href="/dev/site/search-2-page-2.html") 84 more results for 'Benefits']
 
 				li.related-results
 					strong Related searches
@@ -72,5 +71,5 @@ block content
 				li.search-results__input
 					fieldset
 						.field-group.field-group--buttons
-							input#field(type="search", placeholder="Search again", value="Do I qualify for bnefits in the UK")
+							input#field(type="search", placeholder="Search again", value="#{title}")
 							button.btn Search
