--- a/libs/jade/dev/search/results-adviser.jade
+++ b/libs/jade/dev/search/results-adviser.jade
@@ -1,9 +1,10 @@
 block settings
-	- var title = "Benefits"
+	- var mockup = true
+	- var sidebar = true
 	- var dir = "../../"
 	//- var sidebar = true
 
-extends /jade/templates/template-site.jade
+extends /jade/templates/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
@@ -14,15 +15,15 @@ block script
 
 block content
 	.flex-row
-		.col-md-8.col-sm-12
-			.term-suggestion Search instead for #[a bnefits]?
-			.term-correction Showing #[strong 89] results for #[strong benefits]
+		.col-12
+			.search-title Showing results for #[strong overpayment of benefits]
+			.term-suggestion Search instead for #[a oevrpayment of benefits]
 			ul.search-results
 
 				li
 					.heading
 						a Benefits
-					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
+					.description These pages give you information on #[strong benefits] and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
 					.adviser-categories
 						ul(style="margin:0")
 							li #[a Benefits fact sheets]
@@ -33,7 +34,7 @@ block content
 				li
 					.heading
 						a Sick or disabled people and carers
-					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
+					.description If you're sick or disabled, you may be able to claim #[strong benefits] and tax credits.
 					ul.section
 						li #[a Benefits]
 
@@ -56,13 +57,13 @@ block content
 				li
 					.heading
 						a Benefits for families and children
-					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
+					.description #[strong Benefits] for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
 					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
 
 				li.pagination
-					#[a.blocklink(href="/dev/site/search-2-page-2.html") 84 more results for 'Benefits']
+					#[a.blocklink(href="/dev/search/results-adviser-page-2.html") 56 more results for 'overpayment of benefits']
 
 				li.related-results
 					strong Related searches
@@ -71,5 +72,5 @@ block content
 				li.search-results__input
 					fieldset
 						.field-group.field-group--buttons
-							input#field(type="search", placeholder="Search again", value="#{title}")
+							input#field(type="search", placeholder="Search again", value="oevrpayment of benefits")
 							button.btn Search
