dev:change: template.jade nav changed to mirror new IA

--- a/libs/jade/templates/template.jade
+++ b/libs/jade/templates/template.jade
@@ -106,19 +106,15 @@ include partials/header
 					li.top-item.js-mega-menu(style="display: list-item;")
 						a(href="#") Consumer
 					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Relationships
+						a(href="#") Family
 					li.top-item.js-mega-menu(style="display: list-item;")
 						a(href="#") Housing
 					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Law and rights
+						a(href="#") Law and courts
 					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Discrimination
+						a(href="#") Health
 					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Tax
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Healthcare
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Education
+						a(href="#") Immigration
 					li.top-item.js-mega-menu(style="display: list-item;")
 						a(href="#") More from us
 					li.nav-list-primary-more.js-more-menu(style="display: none;")
